[package]
name = "casper-binary-port-access"
version = "0.1.0"
edition = "2021"
authors = ["Rafał Chabowski <rafal@casperlabs.io>"]
description = "Library for accessing Casper binary port."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "casper_binary_port_access"
path = "src/lib.rs"

[dependencies]
casper-types = { git = "https://github.com/casper-network/casper-node.git", default-features = false, branch = "rustSDK-feat-2.0" }
casper-binary-port = { git = "https://github.com/casper-network/casper-node.git", branch = "rustSDK-feat-2.0" }
thiserror = "1"
futures = "0"
rand = { version = "0.8.5", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent"] }
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40.0", features = ["macros", "io-util", "time", "net"] }
