[package]
name = "casper-binary-port-access"
version = "0.1.0"
edition = "2021"
authors = ["Rafał Chabowski <rafal@casperlabs.io>"]
description = "Library for accessing Casper binary port."
license = "Apache-2.0"

[dependencies]
casper-types = { git = "https://github.com/teonite/casper-node.git", branch = "rename_signed_block" }
casper-binary-port = { git = "https://github.com/teonite/casper-node.git", branch = "rename_signed_block" }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.6.4", features = ["codec"] }
futures = "0.3.31"
